chore: update some lines
